--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link href="%PUBLIC_URL%/favicon.png" rel="apple-touch-icon" sizes="144x144">
     <meta
       name="viewport"
       content="width=device-width, height=device-height, initial-scale= 1, maximum-scale= 1"
